# MEDS-ARMv8-optimization-thesis

./: .gitignore  README.md  arm_cpu_bench_mode.sh  benchmark_results.txt  feedback.txt  mod_test.py  peterquestions.txt
_old/no-opt-sig-ref/ref/: Makefile  matrixmod.h  test.c
_old/no-opt-sig-ref/ref/valgrind/: callgrind.out.1344
_old/opt-high-level/: params.py
_old/opt-high-level/include/: meds.h  util.h
_old/opt-high-level/include/keccak/: fips202_vec.h
_old/opt-high-level/src/: bench.c  matrixmod.c  matrixmod_vec.c  meds.c  profile.c  util.c  util_vec.c
_old/opt-high-level/src/asm/: generate_systemizer_asm.py
_old/opt-high-level/src/keccak/: fips202.c
_old/ref-opt-low-level/: benchmatmul.c  benchresult.h  fips202.c  matrixmod.c  meds.c
_old/sage-ref/: Makefile  meds.sage
enable_ccr/: CREDITS.md
meds-no-op-sig/ref/: bench.c  benchmark.c
meds-no-op-sig/ref/valgrind/: callgrind.out.2095  run_valgrind.sh
meds-no-op-sig/sage-ref/: fieldtest.sage
meds/ref/: analysis.txt  gmon.out
meds/ref/valgrind/: callgrind.out.7652
meds/sage-ref/: meds.sage
mod-test/: modtest  modtest.c
opt-high-level/: CHANGES.md  CMakeLists.txt
opt-high-level-vec8/: CMakeLists.txt
opt-high-level-vec8/include/: matrixmod_vec.h  util_vec.h  vec_16x8.h
opt-high-level-vec8/src/: benchmark.c  matrixmod_vec.c  meds_vec.c  test.c  util.c  util_vec.c  vec_16x8.c
opt-high-level-vec8/src/asm/: matrix_systemizer.s
opt-high-level-vec8/src/keccak/: fips202.c
opt-high-level/include/: cyclecounter.h  matrixmod.h  meds_vec.h  randombytes.h  vec_16x8.h
opt-high-level/include/keccak/: fips202_vec.h
opt-high-level/src/: matrixmod_vec.c  meds_vec.c  profile.c  test.c  vec_16x4.c
opt-high-level/src/keccak/: fips202_vec.c  keccak_f1600_x4_hybrid_asm_v3p.s  keccak_f1600_x5_hybrid_asm_v8.s  keccakx2_bas.s
opt-low-level/: CMakeLists.txt  shake_opt_results.md
opt-low-level/include/: matrixmod.h  meds.h  profiler.h  util.h
opt-low-level/include/keccak/: hal_env.h
opt-low-level/src/: benchmatmul.c  benchsolve.c  benchsystemizer.c  cyclecounter.c  matrixmod.c  meds.c  test.c  util.c
opt-low-level/src/asm/matmul/: generate_matmul_asm.py  generate_matmul_asm_old.py  generate_nops.py
opt-low-level/src/asm/matmul8/: generate_matmul8_asm.py  generate_matmul8_asm_old.py
opt-low-level/src/asm/systemizer/: generate_systemizer_asm.py  generate_systemizer_asm_unroll.py
opt-low-level/src/keccak/: keccak_f1600_x3_hybrid_asm_v3p.s  keccakx2_C.c  macros.s
ref/: .gitignore  CMakeLists.txt  CPU_bench_mode.sh  CPU_restore_mode.sh  Makefile  NIST.mk  api.h  bench.c  benchmark.c  benchmatmul.c  benchmatmul_asm.s  benchresult.h  benchrref.c  cyclecounter.c  cyclecounter.h  fips202.c  matmul_generate.py  matmulbench.c  matrixmod.c  meds.c  params.py  pmod_mat_mul_asm_24_4_67.s  pmod_mat_mul_asm_29_103_65.s  pmod_mat_mul_asm_4_4_4.s  pmod_mat_mul_asm_4_5_4.s  seed.h  test.c  util.c
ref-opt-high-level/: CHANGES.md  CMakeLists.txt  NIST.sh  params.py
ref-opt-high-level/include/: matrixmod.h  matrixmod_vec.h  meds.h  meds_vec.h  profiler.h  util.h  util_vec.h  vec_16x4.h
ref-opt-high-level/src/: matrixmod.c  matrixmod_vec.c  meds.c  meds_vec.c  test.c  test_vec.c  util.c  util_vec.c  vec_16x4.c
ref-opt-high-level/src/asm/: generate_systemizer_asm.py  matrix_systemizer.s  pmod_mat_syst_test.s
ref-opt-high-level/src/keccak/: fips202_vec.c  macros.s
ref-opt-low-level/: CHANGES.md  CMakeLists.txt  matmul_generate.py  matrixmod.h  params.py  proc_bench.py  shake_opt_results.md  test.c
ref-opt-low-level/include/: fips202.h  matrixmod.h  meds.h  profiler.h  util.h
ref-opt-low-level/include/keccak/: fips202.h  fips202_vec.h  keccakx2_C.h
ref-opt-low-level/src/: bench.c  benchmark.c  benchmatmul.c  benchsystemizer.c  bitstream.c  fips202.c  fips202_vec.c  matrixmod.c  meds.c  osfreq.c  profile.c  randombytes.c  seed.c  test.c  util.c
ref-opt-low-level/src/NIST/: PQCgenKAT_sign.c
ref-opt-low-level/src/asm/: pmod_mat_mul_asm_24_576_24.s
ref-opt-low-level/src/asm/matmul/: generate_matmul_asm.py
ref-opt-low-level/src/asm/systemizer/: generate_systemizer_DELETE.py  generate_systemizer_asm.py  pmod_mat_syst_test.s
ref-opt-low-level/src/keccak/: fips202.c
ref/NIST/: rng.c
ref/include/: bitstream.h  log.h  profiler.h  util.h
ref/include/toy/: api.h
ref/src/: KAT_test.c  bench.c  benchmark.c  cyclecounter.c  fips202.c  matrixmod.c  meds.c  test.c  util.c
report/: abstract.tex  acknowledgements.tex  algorithm_appendix.tex  appendix.tex  appendix_algorithms.tex  appendix_results.tex  bibliofile.bib  complexityanalysis1.txt  complexityanalysis2.sty  main.tex  results_appendix.tex  thesis.brf  thesis.out  thesis.tex  thesis.thm
report/code/: barrett_reduce_asm.s  barrett_reduce_c.c  barrett_reduce_small_asm.s  freeze_asm.s  freeze_c.c  matrix_multiplication.c  matrix_multiplication_vec.c  montgomery_reduce_small_asm.s  neon_example_asm.s  solve_opt_loop1.c
report/imgs/hash/: hash_struct_par.drawio  hash_struct_seq.drawio
report/imgs/matmul/: parallel_matmul.drawio  parallel_matmul8.drawio
report/imgs/neon/: neon_example.drawio
report/scripts/: generate_profiling_tables.py
report/scripts/lowlevel/: complexity_analysis.sty  generate_bound_table.py  generate_factor_table.py  generate_table.py  results.csv
report/scripts/overall/: generate_figures.py  generate_tables.py  results.csv  results_m2.csv
report/scripts/profiling/: generate_figures.py  results_keygen.csv  results_sign.csv  results_verify.csv
report/scripts/results/: generate_figures.py  generate_table.py  results.csv
report/scripts/results/lowlevel/: generate_figures.py  generate_table.py  results.csv  results_keygen.csv  results_sign.csv  results_verify.csv
report/scripts/results/overall/: generate_figures.py  generate_table.py
report/scripts/results/profiling/: generate_tables.py  results_keygen.csv  (+1 more)
sage-ref/: .gitignore  KAT_check.sage  KAT_test.sage  Makefile  bitstream.py  meds.py  meds.sage  randombytes.py  seedtree.py  util.py
scripts/: generate_inverse_array.py  mod_test.py
(+55 files in other folders)
